Blender 3.0, "View Selected" on Custom Boneshape will focus viewport on bone's origin instead of bone's geometry #92169

Closed
opened 2021-10-13 03:29:35 +02:00 by Sophia · 8 comments

System Information
Operating system: Pop!_Os 20.04
Graphics card: Nvidia GTX 1080ti

Blender Version
Broken: 3.0, 53af51ad50, master, 2021-10-12 22:43
Worked: Hasn't worked on previous versions

Short description of error
If you View Selected on a bone with a custom boneshape that has the "Custom Shape" transform values tweaked, it will focus on the bone's custom shape original geometry position instead of the tweaked geometry position.

Screenshot from 2021-10-12 20-21-23.png
Boneshape has no transforms

Screenshot from 2021-10-12 20-21-09.png
Viewport focuses on bone as expected

Screenshot from 2021-10-12 20-23-07.png
Boneshape has custom transforms from property values

Screenshot from 2021-10-12 20-23-12.png
Viewport focuses on "non transformed shape location"

Screenshot from 2021-10-12 20-26-26.png
Expected Viewport focus location

Exact steps for others to reproduce the error

  • Create an armature
  • To any bone, add a custom boneshape
  • In the bone's "Custom Shape" properties, change transform values of custon boneshape to anything other than 0
  • Press ~ and click View Selected on pie menu, or press . to View Selection. The viewport will focus on the default boneshape's position instead of the custom position
  • This will look like you are taken to a random location in the scene thats far away from the bone geometry

NOTE: This is only affected by changing the Custom Shape's transform values, this issue is not present when utilizing "Overwrite Transforms" with another bone's transforms or when transforming the referenced object for the custom shape

boneshape broken.blend

**System Information** Operating system: Pop!_Os 20.04 Graphics card: Nvidia GTX 1080ti **Blender Version** Broken: 3.0, 53af51ad50ec, master, 2021-10-12 22:43 Worked: Hasn't worked on previous versions **Short description of error** If you View Selected on a bone with a custom boneshape that has the "Custom Shape" transform values tweaked, it will focus on the bone's custom shape original geometry position instead of the tweaked geometry position. ![Screenshot from 2021-10-12 20-21-23.png](https://archive.blender.org/developer/F11029829/Screenshot_from_2021-10-12_20-21-23.png) Boneshape has no transforms ![Screenshot from 2021-10-12 20-21-09.png](https://archive.blender.org/developer/F11029843/Screenshot_from_2021-10-12_20-21-09.png) Viewport focuses on bone as expected ![Screenshot from 2021-10-12 20-23-07.png](https://archive.blender.org/developer/F11029856/Screenshot_from_2021-10-12_20-23-07.png) Boneshape has custom transforms from property values ![Screenshot from 2021-10-12 20-23-12.png](https://archive.blender.org/developer/F11029878/Screenshot_from_2021-10-12_20-23-12.png) Viewport focuses on "non transformed shape location" ![Screenshot from 2021-10-12 20-26-26.png](https://archive.blender.org/developer/F11029940/Screenshot_from_2021-10-12_20-26-26.png) Expected Viewport focus location **Exact steps for others to reproduce the error** - Create an armature - To any bone, add a custom boneshape - In the bone's "Custom Shape" properties, change transform values of custon boneshape to anything other than 0 - Press ~ and click View Selected on pie menu, or press . to View Selection. The viewport will focus on the default boneshape's position instead of the custom position - This will look like you are taken to a random location in the scene thats far away from the bone geometry NOTE: This is only affected by changing the Custom Shape's transform values, this issue is not present when utilizing "Overwrite Transforms" with another bone's transforms or when transforming the referenced object for the custom shape [boneshape broken.blend](https://archive.blender.org/developer/F11029989/boneshape_broken.blend)
Author

Added subscriber: @Zophiekat

Added subscriber: @Zophiekat

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

From code it seems that this operator tries to handle case like this well, but it doesn't work, so I will confirm.

From code it seems that this operator tries to handle case like this well, but it doesn't work, so I will confirm.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-10-20 17:08:08 +02:00
Member

Think I have a fix.

Think I have a fix.

This issue was referenced by ab0195c78f

This issue was referenced by ab0195c78fa20b1c1f8abd1474f0fee07ffb6c8c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92169
No description provided.